tests/baselines/reference/parserClassDeclaration24.errors.txt
parserClassDeclaration24.ts(1,7): error TS2414: Class name cannot be 'any'.


==== parserClassDeclaration24.ts (1 errors) ====
    class any {
          ~~~
!!! error TS2414: Class name cannot be 'any'.
    }